--- a/do_you_love_me v2.0.css
+++ b/do_you_love_me v2.0.css
@@ -38,8 +38,9 @@ body {
   margin-bottom: 3rem;
 }
 .question {
-  font-size: 3.5rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
 .button-container {
   display: flex;
